@@ -1,0 +1,33 @@
+/* $Id */
+
+#creds {
+/* mandatory */
+  position:relative;
+  overflow:hidden;
+/* required but, change to suit */
+  width:100%;
+  height:16em;
+/* optional */
+/*
+  margin:.25em;
+*/
+  border:.5em solid #def;
+/*  padding:.25em 5px .25em .25em; */
+  background:#def;
+  font-weight:bold;
+  font-size:16px;
+}
+.Vscroll {
+  position:absolute;
+  left:4px;
+}
+h2 {
+  margin:0;
+}
+form {
+  margin:1em 0;
+  text-align:center;
+}
+input {
+  margin:0 1em;
+}
