@@ -4,6 +4,8 @@ NOTE: This is the 1.3.X development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - 19-Oct-09 bb Extracting CSS & Javascript from about.php to external files.
+   New script file js/v_h_scrolls.js allows multiple scrollers.
  - 15-Oct-09 bb Remove excess styles
  - 14-Oct-09 bb Patch [ 1753426 ] layerentrys aren't marked as entrys (no hasevent class)
  - 14-Oct-09 bb Patch [ 1425442 ] case-insensitive user names
